코드 및 주석 정리

--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -32,7 +32,7 @@
     <!-- Like -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
 
-    <!-- font-->
+    <!-- Font-->
     <link rel="stylesheet" href="{% static 'css/style3.css' %}">
     
     <script language="javascript">
@@ -70,25 +70,6 @@
     </div>
     <!-- /Preloader -->
 
-    <!-- Top Search Form Area -->
-    <div class="top-search-area">
-        <div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <!-- Close -->
-                        <button type="button" class="btn close-btn" data-dismiss="modal"><i class="ti-close"></i></button>
-                        <!-- Form -->
-                        <form action="index.html" method="post">
-                            <input type="search" name="top-search-bar" class="form-control" placeholder="Search and hit enter...">
-                            <button type="submit">Search</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Header Area Start -->
     <header class="header-area">
         <!-- Main Header Start -->
@@ -99,7 +80,7 @@
                     <nav class="classy-navbar justify-content-between" id="alimeNav">
 
                         <!-- Logo -->
-                        <a class="nav-brand" href="{% url 'index' %}"><img src="{% static 'img/core-img/logo3.png' %}" alt=""></a>
+                        <a class="nav-brand" href="{% url 'index' %}"><img src="{% static 'img/core-img/logo3.png' %}" alt="logo"></a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
