--- a/dgufest/templates/index.html
+++ b/dgufest/templates/index.html
@@ -5,14 +5,14 @@
 
     <link rel="stylesheet" href="{% static 'css/style3.css' %}">
 
-    <!-- Welcome Area Start -->
+    <!-- Index Area Start -->
     <section class="welcome-area">
         <div class="welcome-slides owl-carousel">
             <!-- Single Slide -->
             <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(static/img/main-slide-img/main1.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
-                        <!-- Welcome Text -->
+                        <!-- Title Text -->
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
                                 <h2 data-animation="bounceInDown" data-delay="100ms">멋쟁이사자처럼과<br> HI-SW 봉사단이 함께하는<br>웹 기반 전자 액자 경진대회</h2>
@@ -28,11 +28,11 @@
             <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(static/img/main-slide-img/main2_blur.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
-                        <!-- Welcome Text -->
+                        <!-- Title Text -->
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
-                                <h2 data-animation="bounceInUp" data-delay="100ms">제출기간<br>2020.10.09~2020.11.01</h2>
-                                <p data-animation="bounceInUp" data-delay="500ms">기간 내에 사진을 제출해주세요</p>
+                                <h2 data-animation="bounceInUp" data-delay="100ms">사진/영상 제출 및 투표기간<br>2020.10.09~11.01</h2>
+                                <p data-animation="bounceInUp" data-delay="500ms">기간 내에 사진과 영상을 제출해주세요. 투표(좋아요) 수에는 제한이 없습니다.</p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
                                 </div>
                             </div>
@@ -44,11 +44,11 @@
             <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(static/img/main-slide-img/main3.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
-                        <!-- Welcome Text -->
+                        <!-- Title Text -->
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
-                                <h2 data-animation="bounceInUp" data-delay="100ms">전자 액자 경진대회<br>수상자 발표<br>2020.11.02</h2>
-                                <p data-animation="bounceInUp" data-delay="500ms">좋아요 순으로 순위가 결정됩니다.</p>
+                                <h2 data-animation="bounceInUp" data-delay="100ms">전자 액자 경진 대회<br>수상자 발표<br>2020.11.02</h2>
+                                <p data-animation="bounceInUp" data-delay="500ms">11월 1일까지의 좋아요 득표 순으로 순위가 결정됩니다.</p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
                                 </div>
                             </div>
@@ -58,7 +58,7 @@
             </div>
         </div>
     </section>
-    <!-- Welcome Area End -->
+    <!-- Index Area End -->
 
     <!-- Gallery Area Start -->
     <div class="alime-portfolio-area section-padding-80 clearfix">
@@ -67,7 +67,7 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub1.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub1.jpg' %}" alt="image">
                         <div class="hover-content">
                             <a href="{% static 'img/main-sub-img/sub1.jpg' %}" class="portfolio-img">+</a>
                         </div>
@@ -77,7 +77,7 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video human mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub2.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub2.jpg' %}" alt="image">
                         <div class="hover-content">
                             <a href="{% static 'img/main-sub-img/sub2.jpg' %}" class="portfolio-img">+</a>
                         </div>
@@ -87,7 +87,7 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub3.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub3.jpg' %}" alt="image">
                         <div class="hover-content">
                             <a href="{% static 'img/main-sub-img/sub3.jpg' %}" class="portfolio-img">+</a>
                         </div>
@@ -97,7 +97,7 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="700ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub4.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub4.jpg' %}" alt="image">
                         <div class="hover-content">
                             <a href="{% static 'img/main-sub-img/sub4.jpg' %}" class="portfolio-img">+</a>
                         </div>
@@ -107,7 +107,7 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video country mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub6.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub6.jpg' %}" alt="image">
                         <div class="hover-content">
                             <a href="{% static 'img/main-sub-img/sub6.jpg' %}" class="portfolio-img">+</a>
                         </div>
@@ -117,7 +117,7 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub7.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub7.jpg' %}" alt="image">
                         <div class="hover-content">
                             <a href="{% static 'img/main-sub-img/sub7.jpg' %}" class="portfolio-img">+</a>
                         </div>
@@ -127,7 +127,7 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="700ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub8.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub8.jpg' %}" alt="image">
                         <div class="hover-content">
                             <a href="{% static 'img/main-sub-img/sub8.jpg' %}" class="portfolio-img">+</a>
                         </div>
@@ -137,7 +137,7 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-6 single_gallery_item video country mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub9.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub9.jpg' %}" alt="image">
                         <div class="hover-content">
                             <a href="{% static 'img/main-sub-img/sub9.jpg' %}" class="portfolio-img">+</a>
                         </div>
@@ -147,7 +147,7 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub12.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub12.jpg' %}" alt="image">
                         <div class="hover-content">
                             <a href="{% static 'img/main-sub-img/sub12.jpg' %}" class="portfolio-img">+</a>
                         </div>
@@ -157,7 +157,7 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub10.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub10.jpg' %}" alt="image">
                         <div class="hover-content">
                             <a href="{% static 'img/main-sub-img/sub10.jpg' %}" class="portfolio-img">+</a>
                         </div>
@@ -167,7 +167,7 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub11.jpeg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub11.jpeg' %}" alt="image">
                         <div class="hover-content">
                             <a href="{% static 'img/main-sub-img/sub11.jpeg' %}" class="portfolio-img">+</a>
                         </div>
@@ -177,7 +177,7 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub5.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub5.jpg' %}" alt="image">
                         <div class="hover-content">
                             <a href="{% static 'img/main-sub-img/sub5.jpg' %}" class="portfolio-img">+</a>
                         </div>
@@ -190,6 +190,6 @@
     </div>
     <!-- Gallery Area End -->
     
-    <!--popup javascript-->
+    <!--Popup JavaScript-->
 
 {% endblock %}
