--- a/dgufest/templates/about.html
+++ b/dgufest/templates/about.html
@@ -26,7 +26,7 @@
     </section>
     <!-- Breadcrumb Area End -->
 
-    <!-- About Us Area Start -->
+    <!-- About Area Start -->
     <div class="about-us-area section-padding-80-0 clearfix">
         <div class="container">
             <div class="row align-items-center">
@@ -54,9 +54,9 @@
             </div>
         </div>
     </div>
-    <!-- About Us Area End -->
+    <!-- About Area End -->
 
-    <!-- Why Choose Us Area Start -->
+    <!-- Vote and Prize Area Start -->
     <section class="why-choose-us-area bg-gray section-padding-80-0 clearfix">
         <div class="container">
             <div class="row">
@@ -68,7 +68,7 @@
             </div>
 
             <div class="row">
-                <!-- Single Why Choose Area -->
+                <!-- Schedule Area -->
                 <div class="col-md-6 col-lg-4">
                     <div class="why-choose-us-content text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="chosse-us-icon">
@@ -91,7 +91,7 @@
                     </div>
                 </div>
 
-                <!-- Single Why Choose Area -->
+                <!-- Vote Area -->
                 <div class="col-md-6 col-lg-4">
                     <div class="why-choose-us-content text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="chosse-us-icon">
@@ -114,7 +114,7 @@
                     </div>
                 </div>
 
-                <!-- Single Why Choose Area -->
+                <!-- Prize Area -->
                 <div class="col-md-6 col-lg-4">
                     <div class="why-choose-us-content text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
                         <div class="chosse-us-icon">
@@ -148,7 +148,7 @@
             </div>
         </div>
     </section>
-    <!-- Why Choose  us Area End -->
+    <!-- Vote and Prize Area End -->
 
     <!-- Our Team Area Start -->
     <section class="our-team-area section-padding-80-50">
@@ -162,21 +162,21 @@
             </div>
 
             <div class="row">
-                <!-- Team Member Area -->
+                <!-- Developer Area -->
                 <div class="col-md-6 col-xl-12">
                     <div class="team-content-area text-center mb-30 wow fadeInUp" data-wow-delay="100ms">
                         <h5>강동희 | 김태연 | 이소정 | 이예은 | 이형석 | 임도연 | 주현이 | 최현지</h5>
                         <span>개발 | 동국대학교 멋쟁이사자처럼 8기</span>
                     </div>
                 </div>
-                <!-- Mentor Member Area -->
+                <!-- Mentor Area -->
                 <div class="col-md-6 col-xl-12">
                     <div class="team-content-area text-center mb-30 wow fadeInUp" data-wow-delay="100ms">
                         <h5>김연진 | 박현준 | 양준혁 | 연제훈 | 이주영</h5>
                         <span>멘토 | 동국대학교 멋쟁이사자처럼 운영진</span>
                     </div>
                 </div>
-                <!-- Support Member Area -->
+                <!-- Support Area -->
                 <div class="col-md-6 col-xl-12">
                     <div class="team-content-area text-center mb-30 wow fadeInUp" data-wow-delay="100ms">
                         <h5>동국대학교 융합교육원 | 동국대학교 제52대 총학생회 하이라이트</h5>
