--- a/dgufest/templates/shared/footer.html
+++ b/dgufest/templates/shared/footer.html
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="footer-content d-flex align-items-center justify-content-between">
-                        <!-- Copywrite Text -->
+                        <!-- Copyright Text -->
                         <div class="copywrite-text">
                             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
     Copyright &copy;<script>document.write(new Date().getFullYear());</script> Dongguk Likelion All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
