--- a/dgufest/templates/shared/gallery_item.html
+++ b/dgufest/templates/shared/gallery_item.html
@@ -1,15 +1,15 @@
-<div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 {{category_value}} wow fadeInUp" data-wow-delay="100ms" style="display: flex; flex-direction: column-reverse;">
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 {{ category_value }} wow fadeInUp" data-wow-delay="100ms" style="display: flex; flex-direction: column-reverse;">
     <div class="card" style="border:none">
         <div class="single-portfolio-content">
             {% if "video" in post.mediatype %}
-                <div id="video-{{post.id}}" style="display: block !important;">
+                <div id="video-{{ post.id }}" style="display: block !important;">
                     <video class="col-12" controls preload="metadata" style="padding:0;">
-                        <source src="{{post.mediafile.url}}" alt="video">
+                        <source src="{{ post.mediafile.url }}" alt="video">
                     </video>
                 </div>
                 <div class="hover-content">
                     <a href="{% url 'posts:show' post.id %}" class="whyrano-video" style="left:30%;">+</a>
-                    <a href="{% url 'posts:post_like' post.id %}" class="like_toggle" data-post-id={{post.id}} style="color:white; left:70%; font-size: 25px;">
+                    <a href="{% url 'posts:post_like' post.id %}" class="like_toggle" data-post-id={{ post.id }} style="color:white; left:70%; font-size: 25px;">
                         {% if user in post.like_user_set.all %}
                             <i class="fas fa-heart"></i>
                         {% else %}
@@ -18,10 +18,10 @@
                     </a>
                 </div>  
             {% else %}
-                <img src ="{{post.mediafile.url}}" alt="">
+                <img src ="{{ post.mediafile.url }}" alt="image">
                 <div class="hover-content">
                     <a href="{% url 'posts:show' post.id %}" class="whyrano-video" style="left:30%;">+</a>
-                    <a href="{% url 'posts:post_like' post.id %}" class="like_toggle" data-post-id={{post.id}} style="color:white; left:70%; font-size: 25px;">
+                    <a href="{% url 'posts:post_like' post.id %}" class="like_toggle" data-post-id={{ post.id }} style="color:white; left:70%; font-size: 25px;">
                         {% if user in post.like_user_set.all %}
                             <i class="fas fa-heart"></i>
                         {% else %}
@@ -30,9 +30,9 @@
                     </a>    
                 </div>
             {% endif %}
-            <p style="padding-top: 20px; word-break: break-all;">{{post.title}}</p>
+            <p style="padding-top: 20px; word-break: break-all;">{{ post.title }}</p>
             {% if user == post.user %}
-                <span id="count-{{post.id}}" style="font-family: 'S-CoreDream-3Light';">좋아요 {{ post.like_count }}개</span>
+                <span id="count-{{ post.id }}" style="font-family: 'S-CoreDream-3Light';">좋아요 {{ post.like_count }}개</span>
             {% endif %}
         </div>
     </div>
