--- a/posts/templates/posts/show.html
+++ b/posts/templates/posts/show.html
@@ -1,30 +1,4 @@
 {% block content %}
-
-<div class="ajax-text-and-file">
-    {% if "video" in post.mediatype %}
-        <div id="video-{{post.id}}" style="display: block !important;" class="content file">
-            <video class="col-12" controls preload="metadata" style="padding:0;">
-                <source src="{{post.mediafile.url}}" alt="video">
-            </video>
-        </div>
-    {% else %}
-        <div class="content file">
-            <img src ="{{post.mediafile.url}}" alt="">
-        </div>
-    {% endif %}
-
-    <div class="content text">
-        <h3>{{ post.title }}</h3>
-        <p>{{ post.content }}</p>
-        {% if user == post.user %}
-            <a href="{% url 'posts:update' post.pk %}" class="btn alime-btn btn-2 mt-15" style="color:white;">수정하기</a>
-            <a href="{% url 'posts:delete' post.pk %}" class="btn alime-btn btn-2 mt-15" style="color:white;">삭제하기</a>
-        {% endif %}
-    </div>
-</div>
-
-{% endblock %}
-
 <style>
 .ajax-text-and-file{
     max-width:1000px;
@@ -50,5 +24,28 @@
 .content.text{
     padding:2%;
 }
-
 </style>
+
+<div class="ajax-text-and-file">
+    {% if "video" in post.mediatype %}
+        <div id="video-{{ post.id }}" style="display: block !important;" class="content file">
+            <video class="col-12" controls preload="metadata" style="padding:0;">
+                <source src="{{ post.mediafile.url }}" alt="video">
+            </video>
+        </div>
+    {% else %}
+        <div class="content file">
+            <img src ="{{ post.mediafile.url }}" alt="image">
+        </div>
+    {% endif %}
+
+    <div class="content text">
+        <h3>{{ post.title }}</h3>
+        <p>{{ post.content }}</p>
+        {% if user == post.user %}
+            <a href="{% url 'posts:update' post.pk %}" class="btn alime-btn btn-2 mt-15" style="color:white;">수정하기</a>
+            <a href="{% url 'posts:delete' post.pk %}" class="btn alime-btn btn-2 mt-15" style="color:white;">삭제하기</a>
+        {% endif %}
+    </div>
+</div>
+{% endblock %}
