--- a/users/templates/users/mypage.html
+++ b/users/templates/users/mypage.html
@@ -34,46 +34,45 @@
 
                 <div style="margin-left:100px">
                     <div class="col-12">
-                        <!-- Contact Info -->
+                        <!-- ID -->
                             <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
                                 <p style="font-weight:bolder">아이디</p>
-                                <a>{{user}}</a>
+                                <a>{{ user }}</a>
                             </div>
-                        <!-- Contact Info -->
+                        <!-- ID -->
                     </div>
                     <br><br>
 
                     <div class="col-12">
-                        <!-- Contact Info -->
+                        <!-- Phone -->
                         <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
                                 <p style="font-weight:bolder">핸드폰 번호</p>
-                                <a>{{user.profile.phone_number}}</a>
+                                <a>{{ user.profile.phone_number }}</a>
                         </div>
                     </div>
                     <br><br>
 
                     <div class="col-12">
-                        <!-- Contact Info -->
+                        <!-- Name -->
                         <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
                                 <p style="font-weight:bolder">이름</p>
-                                <a>{{user.profile.name}}</a>
+                                <a>{{ user.profile.name }}</a>
                         </div>
                     </div>
                     <br><br>
 
-                        <div class="col-12">
-                        <!-- Contact Info -->
+                    <div class="col-12">
+                        <!-- Student ID -->
                         <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
                                 <p style="font-weight:bolder">학번</p>
-                                <a>{{user.profile.student_id}}</a>
+                                <a>{{ user.profile.student_id }}</a>
                         </div>
-                        <br><br>
+                    </div>
+                    <br><br>
                 </div>
-        </div>
-
             {% else %}
                 <div class="col-12 text-center">
-                    <h3 class="wow fadeInUp" data-wow-delay="100ms" contact-title mb-30>로그인 후 이용 가능합니다</h3>
+                    <h3 class="wow fadeInUp" data-wow-delay="100ms" contact-title mb-30>로그인 후 이용이 가능합니다.</h3>
                 </div>
 
                 <div class="col-12 text-center">
