--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -30,7 +30,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
-                <!-- Projects Menu -->
+                <!-- Category Menu -->
                 <div class="alime-projects-menu wow fadeInUp" data-wow-delay="100ms">
                     <div class="portfolio-menu text-center">
                         <button class="btn" data-filter="*" id="all">All</button>
