--- a/dgufest/templates/account/signup.html
+++ b/dgufest/templates/account/signup.html
@@ -55,12 +55,12 @@
         {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <p style="color: black; font-weight: bolder;">회원가입 시 해당 사이트의 <a href="{% url 'service_terms' %}" style="color:red; font-weight: bolder;">서비스 이용약관</a> 및 <a href="{% url 'personal_data' %}"  style="color:red; font-weight: bolder;">개인정보처리방침</a>을 확인하였으며, 동의합니다.</p>
+        <p style="color: grey; font-weight: bolder;">회원가입 시 해당 사이트의 <a href="{% url 'service_terms' %}" style="color:lightpink; font-weight: bolder;">서비스 이용약관</a> 및 <a href="{% url 'personal_data' %}"  style="color:lightpink; font-weight: bolder;">개인정보처리방침</a>을 확인하였으며, 동의합니다.</p>
             <div class="col-12" data-wow-delay="800ms">
                 <button type="submit" class="btn alime-btn btn-2 mt-15">{% trans 'Sign Up' %}</button>
             </div>
     </form>
-    <p style="padding-top: 30px; color: #fc6060">{% blocktrans %}↓회원가입에 문제가 있으시면 저희에게 연락주세요.↓{% endblocktrans %}</p>
+    <p style="padding-top: 30px; color: #fc6060">{% blocktrans %}👇 회원가입에 문제가 있으시면 저희에게 연락주세요. 👇{% endblocktrans %}</p>
     <a href="https://pf.kakao.com/_jxbIxfd">
         <i class="fas fa-comment">  카카오톡 채널 <멋쟁이사자처럼 at 동국대학교></i>
     </a>
