--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -100,7 +100,9 @@
                 },
 
                 error: function(response) {
-                    alert('오류가 발생했습니다.');
+                    var message = response.responseText;
+                    if (message == 'timeout') alert('원활한 투표 집계를 위해 잠시 좋아요 기능이 중단됩니다. 양해 부탁드립니다.');
+                    else alert('오류가 발생했습니다.');
                 }
             });
         });
