--- a/dgufest/templates/index.html
+++ b/dgufest/templates/index.html
@@ -67,9 +67,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub1.jpg' %}" alt="image">
+                        <img src="{% static 'img/main-sub-img/sub1.JPG' %}" alt="image">
                         <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub1.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/main-sub-img/sub1.JPG' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -77,9 +77,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video human mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub2.jpg' %}" alt="image">
+                        <img src="{% static 'img/main-sub-img/sub2.JPG' %}" alt="image">
                         <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub2.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/main-sub-img/sub2.JPG' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -87,9 +87,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub3.jpg' %}" alt="image">
+                        <img src="{% static 'img/main-sub-img/sub3.JPG' %}" alt="image">
                         <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub3.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/main-sub-img/sub3.JPG' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -97,9 +97,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="700ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/main-sub-img/sub4.jpg' %}" alt="image">
+                        <img src="{% static 'img/main-sub-img/sub4.JPG' %}" alt="image">
                         <div class="hover-content">
-                            <a href="{% static 'img/main-sub-img/sub4.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/main-sub-img/sub4.JPG' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
