--- a/users/templates/users/like_list.html
+++ b/users/templates/users/like_list.html
@@ -28,7 +28,11 @@
         <div class="contact-area section-padding-50-50">
             <div class="container">
                 {% if user.is_authenticated %}
-                    <div class="col-12 text-center mb-5"><h1 style="font-family:'yg-jalnan';">좋아요 누른 글</h1></div>
+                <div class="alime-projects-menu wow fadeInUp" data-wow-delay="100ms">
+                    <div class="portfolio-menu text-center">
+                        <button class="btn" data-filter="*" id="all" style="font-size: 40px; font-family: 'yg-jalnan';">좋아요 누른 글</button>
+                    </div>
+                </div>
                     <div class="row alime-portfolio">
                         {% for like in likes %}
                             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp" data-wow-delay="100ms" style="display: flex; flex-direction: column-reverse;">
