--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -18,7 +18,16 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    
+    <!--thumbnail-->
+    <meta property="og:title" content="동국대 전자 액자 경진 대회">
+    <meta property="og:image" content="{% static 'img/thumbnail/thumbnail_img.png' %}"> 
+    <meta property="og:image:width" content="800"/>
+    <meta property="og:image:height" content="400"/> 
+    <meta property="og:url" content="http://dgufest.com"/> 
+    <meta property="og:site_name" content="동국대 전자 액자 경진 대회"/> 
+    <meta property="og:type" content="website"/>
+    
     <!-- Title -->
     <title>동국대 전자 액자 경진 대회</title>
 
