--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -5,7 +5,7 @@
 <!-- hover 버튼 위치 -->
 <link rel="stylesheet" href="{% static 'css/style4.css' %}">
 <!-- Breadcrumb Area Start -->
-<section class="breadcrumb-area bg-img bg-overlay jarallax">
+<section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(/static/img/about-img/aboutimg.jpg);">
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <div class="col-12">
