팝업 오픈 주석처리

--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -66,7 +66,7 @@
             }
         }
         if( !getCookie("close20090524") ){
-            window.open("{% url 'popup' %}","타이틀","left=80,top=80,width=510,height=590,resizable=no, scrollbar=no, status=no,menubar=no,toolbar=no,location=no");
+            // window.open("{% url 'popup' %}","타이틀","left=80,top=80,width=510,height=590,resizable=no, scrollbar=no, status=no,menubar=no,toolbar=no,location=no");
         }
     </script>
 
