--- a/dgufest/templates/about.html
+++ b/dgufest/templates/about.html
@@ -105,7 +105,8 @@
                         </p>
                         <br>
                         <p>
-                            수상작은 좋아요 수에 따라 결정되며, 수상자로 선정된 재학생분들에게는 상금 지급과 함께 메인에 작품이 전시될 수 있는 기회를 드립니다.
+                            수상작은 좋아요 수에 따라 결정되며, 수상자로 선정된 재학생분들에게는 상금 지급과 함께 메인에 작품이 전시될 수 있는 기회를 드립니다.<br>
+                            (중복수상은 불가합니다.)
                         </p>
                         <br>
                         <p>
